--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="work-sans-font">
-    <header>
-          <nav class="navbar">
+    <header class="bc-color">
+          <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
-
+            <ul class="nav-links display-flex">
+              <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
+              <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
+              <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
+              <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
+            </ul>
 
           </nav>
     </header>
