--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <body class="work-sans-font">
     <header class="bc-color">
           <nav class="navbar display-flex">
-            <h3 class="brand">G3 Architects</h3>
+            <h3 class="brand dark-1">G3 Architects</h3>
             <ul class="nav-links display-flex">
               <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
               <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
               <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
               <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
             </ul>
-
           </nav>
     </header>
     <main>
