--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Website</title>
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Website</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body class="work-sans-font">
-    <header class="bc-color">
-          <nav class="navbar display-flex">
-            <h3 class="brand dark-1">G3 Architects</h3>
-            <ul class="nav-links display-flex">
-              <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
-              <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
-              <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
-              <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
-            </ul>
-          </nav>
-    </header>
-    <main>
+  <header class="bc-color">
+    <nav class="navbar display-flex">
+      <h3 class="brand dark-1">G3 Architects</h3>
+      <ul class="nav-links display-flex">
+        <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
+        <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
+        <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
+        <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
+      </ul>
+    </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h1 class="banner-title dark-1">Brand New Group of Architects</h1>
+      <p class="banner-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button class="btn-primary">Explore More</button>
+      </div>
+        <img class="banner-img" src="./images/banner.png" alt="">
+    </div>
+  </header>
+  <main>
 
-    </main>
-    <footer>
+  </main>
+  <footer>
 
-    </footer>
+  </footer>
 </body>
+
 </html>
