--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
               <button style="margin-top: 32px;" class="btn-primary">Explore More</button>
              </div>
        </section>
+       <!-- section features love and enjoy -->
+        <section>
+
+        </section>
+        <!-- Some Facts -->
+         <section class="some facts">
+            <h3 class="feature-title dark-1">Some Facts</h3>
+            <p class="lorem dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+              <div class="card display-flex">
+                <div class="sec">
+                  <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                <h4 class="fact-number">54</h4>
+                <h5 class="fact-name">Awards Winnings</h5>
+                </div>
+              </div>
+              <div class="card display-flex">
+               <div>
+                 <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                <h4 class="fact-number">1458</h4>
+                <h5 class="fact-name">Project Finished</h5>
+               </div>
+              </div>
+              <div class="card display-flex">
+                <div>
+                  <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                <h4 class="fact-number">590</h4>
+                <h5 class="fact-name">Clients Worked</h5>
+                </div>
+              </div>
+              <div class="card display-flex">
+              <div>
+                  <img src="./images/icons/email.png" alt="" class="fact-icon">
+                <h4 class="fact-number">22578</h4>
+                <h5 class="fact-name">Email Send</h5>
+              </div>
+              </div>
+            </div>
+         </section>
   </main>
   <footer>
 
