--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="lorem dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-container">
               <div class="card display-flex">
-                <div class="sec">
+                <div>
                   <img src="./images/icons/ribon.png" alt="" class="fact-icon">
                 <h4 class="fact-number">54</h4>
                 <h5 class="fact-name">Awards Winnings</h5>
