--- a/index.html
+++ b/index.html
@@ -22,114 +22,128 @@
     <div class="banner">
       <div class="banner-content">
         <h1 class="banner-title dark-1">Brand New Group of Architects</h1>
-      <p class="banner-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
-        suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <p class="banner-details dark-3">There are many variations of passages of Lorem Ipsum available, but the
+          majority have
+          suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
       </div>
-        <img class="banner-img" src="./images/banner.png" alt="">
+      <img class="banner-img" src="./images/banner.png" alt="">
     </div>
   </header>
   <main>
-       <section class="teams display-flex">
-        <div class="team-img-container">
-             <img src="./images/team1.png" alt="">           
-             <img src="./images/team2.png" alt="">
-             <img src="./images/team3.png" alt="">
-             <img src="./images/team4.png" alt="">
+    <section class="teams display-flex">
+      <div class="team-img-container">
+        <img src="./images/team1.png" alt="">
+        <img src="./images/team2.png" alt="">
+        <img src="./images/team3.png" alt="">
+        <img src="./images/team4.png" alt="">
+      </div>
+      <div class="our-features">
+        <h3 class="feature-title"><span class="dark-3">Quick list</span> <span class="dark-1">of Our</span> <span
+            style="color: rgba(255, 144, 14, 1);">Features</span></h3>
+        <p class="feature-description dark-3">There are many variations of passages of Lorem Ipsum available, but the
+          majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+        </p>
+        <button style="margin-top: 32px;" class="btn-primary">Explore More</button>
+      </div>
+    </section>
+    <!-- section features love and enjoy -->
+    <section>
+      <div class="features display-flex">
+        <div>
+          <h3 id="feature-section-title" class="section-title dark-1">Features you will <br> love & enjoy</h3>
+          <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <!-- feature card container -->
+          <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Drag & Drop Builder</h4>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Awesome Modern Design</h4>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Super Easy to Edit</h4>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+              suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+
         </div>
-             <div class="our-features">
-              <h3 class="feature-title"><span class="dark-3" >Quick list</span> <span class="dark-1">of Our</span> <span style="color: rgba(255, 144, 14, 1);">Features</span></h3>
-              <p class="feature-description dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-              <button style="margin-top: 32px;" class="btn-primary">Explore More</button>
-             </div>
-       </section>
-       <!-- section features love and enjoy -->
-        <section>
-            <div class="features display-flex">
-              <div>
-                 <h3 id="feature-section-title" class="section-title dark-1">Features you will <br> love & enjoy</h3>
-                 <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <!-- feature card container -->
-                 <div class="feature-card">
-                  <h4 class="feature-title">Dexktop & Mobile Version</h4>
-                  <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                 </div>
-                 <div class="feature-card">
-                  <h4 class="feature-title">Drag & Drop Builder</h4>
-                  <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                 </div>
-                 <div class="feature-card">
-                  <h4 class="feature-title">Awesome Modern Design</h4>
-                  <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                 </div>
-                 <div class="feature-card">
-                  <h4 class="feature-title">Super Easy to Edit</h4>
-                  <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                 </div>
-
-              </div>
-              <div class="feature-architect">
-                <img src="./images/architect.png" alt="">
-                <button id="experience-badge" class="btn-primary">
-                  <span id="experience-year">10+Years</span><br>
-                  <span>Experience</span>
-                </button>
-              </div>
-            </div>
-        </section>
-        <!-- Some Facts -->
-         <section class="some facts">
-            <h3 class="feature-title dark-1">Some Facts</h3>
-            <p class="lorem dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-            <div class="facts-container">
-              <div class="card display-flex">
-                <div>
-                  <img src="./images/icons/ribon.png" alt="" class="fact-icon">
-                <h4 class="fact-number">54</h4>
-                <h5 class="fact-name">Awards Winnings</h5>
-                </div>
-              </div>
-              <div class="card display-flex">
-               <div>
-                 <img src="./images/icons/projects.png" alt="" class="fact-icon">
-                <h4 class="fact-number">1458</h4>
-                <h5 class="fact-name">Project Finished</h5>
-               </div>
-              </div>
-              <div class="card display-flex">
-                <div>
-                  <img src="./images/icons/customers.png" alt="" class="fact-icon">
-                <h4 class="fact-number">590</h4>
-                <h5 class="fact-name">Clients Worked</h5>
-                </div>
-              </div>
-              <div class="card display-flex">
-              <div>
-                  <img src="./images/icons/email.png" alt="" class="fact-icon">
-                <h4 class="fact-number">22578</h4>
-                <h5 class="fact-name">Email Send</h5>
-              </div>
-              </div>
-            </div>
-         </section>
-         <!-- section Our Sponsors -->
-          <section class="our-sponsors">
-            <div class="sponsors-info">
-              <h3 class="section-title">Our Sponsors</h3>
-              <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-            </div>
-            <div class="sponsor-companies">
-              <img src="./images/sponsors/spotify.png" alt="">
-              <img src="./images/sponsors/amazon.png" alt="">
-              <img src="./images/sponsors/google.png" alt="">
-              <img src="./images/sponsors/telerama.png" alt="">
-              <img src="./images/sponsors/figma.png" alt="">
-            </div>
-
-          </section>
+        <div class="feature-architect">
+          <img src="./images/architect.png" alt="">
+          <button id="experience-badge" class="btn-primary">
+            <span id="experience-year">10+Years</span><br>
+            <span>Experience</span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- Some Facts -->
+    <section class="some facts">
+      <h3 class="feature-title dark-1">Some Facts</h3>
+      <p class="lorem dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered alteration.</p>
+      <div class="facts-container">
+        <div class="card display-flex">
+          <div>
+            <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+            <h4 class="fact-number">54</h4>
+            <h5 class="fact-name">Awards Winnings</h5>
+          </div>
+        </div>
+        <div class="card display-flex">
+          <div>
+            <img src="./images/icons/projects.png" alt="" class="fact-icon">
+            <h4 class="fact-number">1458</h4>
+            <h5 class="fact-name">Project Finished</h5>
+          </div>
+        </div>
+        <div class="card display-flex">
+          <div>
+            <img src="./images/icons/customers.png" alt="" class="fact-icon">
+            <h4 class="fact-number">590</h4>
+            <h5 class="fact-name">Clients Worked</h5>
+          </div>
+        </div>
+        <div class="card display-flex">
+          <div>
+            <img src="./images/icons/email.png" alt="" class="fact-icon">
+            <h4 class="fact-number">22578</h4>
+            <h5 class="fact-name">Email Send</h5>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section Our Sponsors -->
+    <section class="our-sponsors">
+      <div class="sponsors-info">
+        <h3 class="section-title">Our Sponsors</h3>
+        <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+          alteration.</p>
+      </div>
+      <div class="sponsor-companies">
+        <img src="./images/sponsors/spotify.png" alt="">
+        <img src="./images/sponsors/amazon.png" alt="">
+        <img src="./images/sponsors/google.png" alt="">
+        <img src="./images/sponsors/telerama.png" alt="">
+        <img src="./images/sponsors/figma.png" alt="">
+      </div>
+    </section>
   </main>
   <footer>
-
+    <section class="footer-section">
+      <div>
+        <p class="footer-title dark-2">All rights reserved copyright@2023 startup landing page design</p>
+      </div>
+    </section>
   </footer>
 </body>
 
